# simple-calculator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
example/: input.json
mathlib/: CMakeLists.txt
mathlib/include/: math_operations.h
mathlib/src/: math_operations.cpp
mathlib/tests/: CMakeLists.txt  test_math.cpp
src/: CMakeLists.txt  Calculator.cpp  Calculator.h  Checker.cpp  Checker.h  Log.h  Logger.h  OperationData.h  Parser.cpp  Parser.h  Printer.cpp  Printer.h  Runner.cpp  Runner.h  main.cpp
src/logging/: Logger.h  SpdLogger.h
tests/: CMakeLists.txt  Checker_test.cpp  Printer_test.cpp  calculator_tests.cpp  checker_tests.cpp  parser_tests.cpp  runner_tests.cpp
